--- a/login/register.html
+++ b/login/register.html
@@ -9,60 +9,54 @@
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../../public/css/login/forget.css">
+	<link rel="stylesheet" href="../../public/css/login/register.css">
 </head>
 <body>
 	<header class="header">
 		<span class="icon_back" onclick="location.href='login.html'"><img src="../../public/img/login/nav_back_icon@2x.png" alt=""></span>
-		忘记密码
+		注册
 		<span class="login" onclick="hrefToLogin()">登录</span>
 	</header>
 	<section>
-		<div>
+		<div class="cell">
 			<img src="../../public/img/login/content_ID_icon@2x.png">
 			账号:<input type="text" id="ID" placeholder="请输入手机号码">
 		</div>
 		<div class="line"></div>
-		<div>
+		<div class="cell">
 			<img src="../../public/img/login/content_verify_icon@2x.png">
 			验证码:<input type="password" placeholder="请输入验证码">
-			<button class="get_code" onclick="submitHandler(this)">获取验证码</button>
+			<button class="get_code" onclick="submitHandler(this)" id="">获取验证码</button>
 		</div>
 		<div class="line"></div>
-		<div>
+		<div class="cell">
 			<img src="../../public/img/login/content_password_icon@2x.png">
 			密码:<input type="password" placeholder="请输入新的密码">
 		</div>
 		<div class="line"></div>
-		<div>
+		<div class="cell">
 			<img src="../../public/img/login/content_password_icon@2x.png">
 			密码:<input type="password" placeholder="请输入新的密码">
+		</div>
+		<div class="line"></div>
+		<div class="cell" id="select_box">
+			<img src="../../public/img/login/content_password_icon@2x.png">
+			身份:<input type="password" placeholder="经纪人">
+			<img class="select_icon" id="select_icon" onclick="myRotate()" src="../../public/img/login/down_select_icon@2x.png">
+			<ul class="options" id="options">
+				<li onclick="hrefToMiddleman()">经纪人</li>
+				<li>小业主</li>
+				<li onclick="hrefToOperator()">运营商</li>
+				<li onclick="hrefToAgent()">代理商</li>
+				<li>开发商</li>
+			</ul>
 		</div>
 	</section>
-	<button class="btn_sure">
-		确定
-	</button>
+	<button class="btn_register" onclick="hrefToLoginSuccess()">注册</button>
+	<div class="agreement">
+		<span>注册即代表同意</span><a href="agreement.html">《安居源用户协议》</a>
+	</div>
 </body>
-<script>
-function hrefToLogin(){
-	location.href="login.html"
-}
-
-var countdown=60;
-function submitHandler(obj){
-	var a=setTimeout(function(){
-		submitHandler(obj)
-	},1000);
-	if(countdown==0){
-		obj.removeAttribute("disabled");
-		obj.innerHTML="获取验证码";
-		countdown = 60;
-		clearTimeout(a)
-	}else{
-		obj.setAttribute("disabled",true);
-		obj.innerHTML="重新发送("+ countdown+")";
-		countdown--;
-	}
-}
-</script>
+<script src="../../public/js/register.js"></script>
+<script src="../../public/js/hypertext_reference.js"></script>
 </html>
